--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,4 @@ framework = arduino
 board_build.partitions = no_ota_eeprom.csv
 build_flags = -DNO_GLOBAL_EEPROM -DDEBUG_EEPROM32_ROTATE_PORT=Serial -DI2C_BUFFER_LENGTH=255 -g
 ;-DUSE_SERIAL
-lib_deps = AsyncTCP, Adafruit Unified Sensor, ESP32Encoder
-  
+lib_deps = AsyncTCP, Adafruit Unified Sensor
