--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,13 @@
-[submodule "lib/Adafruit_ADS1X15"]
-	path = lib/Adafruit_ADS1X15
-	url = https://github.com/soligen2010/Adafruit_ADS1X15.git
-[submodule "lib/Adafruit_BNO055"]
-	path = lib/Adafruit_BNO055
-	url = https://github.com/eringerli/Adafruit_BNO055.git
-[submodule "lib/Adafruit_MMA8451_Library"]
-	path = lib/Adafruit_MMA8451_Library
-	url = https://github.com/eringerli/Adafruit_MMA8451_Library.git
-[submodule "ArduinoJson.git"]
-	path = lib/ArduinoJson
-	url = https://github.com/bblanchon/ArduinoJson.git
-[submodule "lib/AutoPID"]
-	path = lib/AutoPID
-	url = https://github.com/eringerli/AutoPID.git
-[submodule "lib/eeprom32_rotate"]
-	path = lib/eeprom32_rotate
-	url = https://github.com/xoseperez/eeprom32_rotate.git
-[submodule "lib/ESPAsyncWebServer"]
-	path = lib/ESPAsyncWebServer
-	url = https://github.com/me-no-dev/ESPAsyncWebServer.git
-[submodule "lib/ESPUI"]
-	path = lib/ESPUI
-	url = https://github.com/eringerli/ESPUI.git
 [submodule "lib/MicroNMEA"]
 	path = lib/MicroNMEA
 	url = https://github.com/eringerli/MicroNMEA.git
-[submodule "tools/EspArduinoExceptionDecoder"]
-	path = tools/EspArduinoExceptionDecoder
-	url = https://github.com/me21/EspArduinoExceptionDecoder.git
+[submodule "lib/Adafruit_ADS1X15"]
+	path = lib/Adafruit_ADS1X15
+	url = https://github.com/soligen2010/Adafruit_ADS1X15
+[submodule "lib/ESPUI"]
+	path = lib/ESPUI
+	url = https://github.com/s00500/ESPUI/
+	branch = 2.0.0
+[submodule "lib/AutoPID"]
+	path = lib/AutoPID
+	url = https://github.com/doppelgrau/AutoPID
