--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,10 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
-board_build.partitions = no_ota_eeprom.csv
-build_flags = -DNO_GLOBAL_EEPROM -DDEBUG_EEPROM32_ROTATE_PORT=Serial -DI2C_BUFFER_LENGTH=255 -g
+board_build.partitions = partition.csv
+build_flags = -DI2C_BUFFER_LENGTH=255  -Os
 ;-DUSE_SERIAL
-lib_deps = AsyncTCP, Adafruit Unified Sensor, ESP32CAN, Adafruit FXOS8700, Adafruit FXAS21002C, Adafruit Unified Sensor, Adafruit AHRS
+lib_deps = AsyncTCP, SparkFun LSM9DS1 IMU, ArduinoJson, ESP Async WebServer, EspSoftwareSerial
+
+; if the port is not detected automatically
+; upload_port = /dev/ttyUSB1
