--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 board_build.partitions = partition.csv
 build_flags = -DI2C_BUFFER_LENGTH=255  -Os
 ;-DUSE_SERIAL
-lib_deps = AsyncTCP, SparkFun LSM9DS1 IMU, ArduinoJson, ESP Async WebServer, EspSoftwareSerial
+lib_deps = AsyncTCP, SparkFun LSM9DS1 IMU, ArduinoJson, ESP Async WebServer, EspSoftwareSerial, Adafruit Unified Sensor
 
 ; if the port is not detected automatically
 ; upload_port = /dev/ttyUSB1
