quick&dirty fix for compiling: set the version of the platform to 1.7.0

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:featheresp32]
-platform = espressif32
+platform = espressif32@1.7.0
 board = featheresp32
 framework = arduino
 board_build.partitions = no_ota_eeprom.csv
