--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif32
 board = featheresp32
 framework = arduino
 board_build.partitions = no_ota_eeprom.csv
-build_flags = -DNO_GLOBAL_EEPROM -DDEBUG_EEPROM32_ROTATE_PORT=Serial -DI2C_BUFFER_LENGTH=255 -g -std=c++11 -D_GLIBCXX_USE_C99
+build_flags = -DNO_GLOBAL_EEPROM -DDEBUG_EEPROM32_ROTATE_PORT=Serial -DI2C_BUFFER_LENGTH=255 -g -std=c++11 -D_GLIBCXX_USE_C99 -fno-rtti
 ;-DUSE_SERIAL
-lib_deps = AsyncTCP, Adafruit Unified Sensor, ESP32CAN, Adafruit FXOS8700, Adafruit FXAS21002C, Adafruit Unified Sensor, Adafruit AHRS
+lib_deps = AsyncTCP, Adafruit Unified Sensor, ESP32CAN, Adafruit FXOS8700, Adafruit FXAS21002C, Adafruit Unified Sensor, Adafruit AHRS, ESP Async WebServer
