fixed build by forcing Adafruit AHRS to version 1.1.4

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 board_build.partitions = min_spiffs.csv
 build_flags = -DNO_GLOBAL_EEPROM -DDEBUG_EEPROM32_ROTATE_PORT=Serial -DI2C_BUFFER_LENGTH=255 -g -std=c++11 -D_GLIBCXX_USE_C99 -fno-rtti -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
 ;-DUSE_SERIAL
-lib_deps = AsyncTCP, Adafruit Unified Sensor, ESP32CAN, Adafruit FXOS8700, Adafruit FXAS21002C, Adafruit Unified Sensor, Adafruit AHRS, ESP Async WebServer, AsyncElegantOTA, ArduinoJson@5.13.4
+lib_deps = AsyncTCP, Adafruit Unified Sensor, ESP32CAN, Adafruit FXOS8700, Adafruit FXAS21002C, Adafruit Unified Sensor, Adafruit AHRS@1.1.4, ESP Async WebServer, AsyncElegantOTA, ArduinoJson@5.13.4
