--- a/lib/.github/workflows/githubci.yml
+++ b/lib/.github/workflows/githubci.yml
@@ -13,6 +13,32 @@
       env:
         GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
         PRETTYNAME : "Adafruit Arduino Library"
+<<<<<<<
+      run: bash ci/doxy_gen_and_deploy.sh
+=======
+         repository: adafruit/ci-arduino
+         path: ci
+
+    - name: Install the prerequisites
+      run: bash ci/actions_install.sh
+>>>>>>>
+
+<<<<<<<
+<<<<<<<
+    - name: Test the code on supported platforms
+      run: python3 ci/build_platform.py main_platforms
+>>>>>>>
+=======
+    - name: clang
+=======
+    - name: Check for correct code formatting with clang-format
+>>>>>>>
+      run: python3 ci/run-clang-format.py -e "ci/*" -e "bin/*" -r .
+
+    - name: Check for correct documentation with doxygen
+      env:
+        GH_REPO_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
+        PRETTYNAME : "Adafruit Arduino Library"
       run: bash ci/doxy_gen_and_deploy.sh
 
     - name: Test the code on supported platforms
