--- a/lib/.github/workflows/githubci.yml
+++ b/lib/.github/workflows/githubci.yml
@@ -64,6 +64,7 @@
     - name: Test the code on supported platforms
       run: python3 ci/build_platform.py main_platforms
 >>>>>>>
+<<<<<<<
 =======
     - name: test platforms
 =======
@@ -76,9 +77,23 @@
 =======
     - name: Install the prerequisites
 >>>>>>>
+=======
+         repository: adafruit/ci-arduino
+         path: ci
+
+    - name: Install the prerequisites
+>>>>>>>
       run: bash ci/actions_install.sh
 
+<<<<<<<
+<<<<<<<
     - name: Check for correct code formatting with clang-format
+=======
+    - name: clang
+>>>>>>>
+=======
+    - name: Check for correct code formatting with clang-format
+>>>>>>>
       run: python3 ci/run-clang-format.py -e "ci/*" -e "bin/*" -r .
 
     - name: Check for correct documentation with doxygen
@@ -87,6 +102,15 @@
         PRETTYNAME : "Adafruit Arduino Library"
       run: bash ci/doxy_gen_and_deploy.sh
 
+<<<<<<<
+<<<<<<<
     - name: Test the code on supported platforms
+      run: python3 ci/build_platform.py main_platforms
+>>>>>>>
+=======
+    - name: test platforms
+=======
+    - name: Test the code on supported platforms
+>>>>>>>
       run: python3 ci/build_platform.py main_platforms
 >>>>>>>
