changed platformio.ini: LTO, various updates

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,35 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = featheresp32
+
 [env:featheresp32]
-platform = espressif32
+platform = https://github.com/platformio/platform-espressif32.git
 board = featheresp32
 framework = arduino
+platform_packages =
+    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 board_build.partitions = min_spiffs.csv
-build_flags = -DNO_GLOBAL_EEPROM -DDEBUG_EEPROM32_ROTATE_PORT=Serial -DI2C_BUFFER_LENGTH=255 -g -std=c++11 -D_GLIBCXX_USE_C99 -fno-rtti -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
-;-DUSE_SERIAL
-lib_deps = AsyncTCP, Adafruit Unified Sensor, ESP32CAN, Adafruit FXOS8700, Adafruit FXAS21002C, Adafruit Unified Sensor, Adafruit AHRS@1.1.4, ESP Async WebServer, AsyncElegantOTA, ArduinoJson@5.13.4
+build_flags =  -std=c++17 -D_GLIBCXX_USE_C99 -fno-rtti -fverbose-asm -save-temps=obj -ffunction-sections -fdata-sections -flto=4 -fuse-linker-plugin -fwhole-program -fno-fat-lto-objects
+#-ffat-lto-objects -g
+#-fuse-linker-plugin
+src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<../lib/cbor-lite>
+lib_deps =
+	adafruit/Adafruit Unified Sensor
+	adafruit/Adafruit SH110X
+	adafruit/Adafruit SSD1306
+	ESP32CAN
+	AsyncTCP@^1.1.1
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	AsyncElegantOTA
+	bblanchon/ArduinoJson@^6.18.5
+	tttapa/Arduino Filters
+; 	linlin-study/FreeRTOS-Kernel@^10.4.4-1
+upload_speed = 921600
+
+[env:featheresp32_ota]
+extends = env:featheresp32
+upload_protocol = espota
+upload_port = 192.168.11.172
+upload_flags = ""
