simplified build_flags

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,13 @@
 default_envs = featheresp32
 
 [env:featheresp32]
-platform = https://github.com/platformio/platform-espressif32.git
+platform = espressif32
 board = featheresp32
 framework = arduino
 platform_packages =
     platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 board_build.partitions = min_spiffs.csv
-build_flags =  -std=c++17 -D_GLIBCXX_USE_C99 -fno-rtti -fverbose-asm -save-temps=obj -ffunction-sections -fdata-sections -flto=4 -fuse-linker-plugin -fwhole-program -fno-fat-lto-objects
-#-ffat-lto-objects -g
-#-fuse-linker-plugin
+build_flags = -std=c++17 -D_GLIBCXX_USE_C99
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<../lib/cbor-lite>
 lib_deps =
 	adafruit/Adafruit Unified Sensor
